--- a/Notebooks/a02_ru_fix_demo_analysis.ipynb
+++ b/Notebooks/a02_ru_fix_demo_analysis.ipynb
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfbc8f78",
+   "id": "5ab1dc2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "baab5c5e",
+   "id": "10a006b3",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "3e64dd61",
+   "id": "a9ca0f58",
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "b7b0e146",
+   "id": "206eba74",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64edfce9",
+   "id": "724a9f07",
    "metadata": {},
    "source": [
     "\n",
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "b1ac8a63",
+   "id": "cc8486ef",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e2d8bed",
+   "id": "7888ce9f",
    "metadata": {},
    "source": [
     "- The discrete target values are: **A1=0, A2=1, B1=2, B2=3, C1=4, C2=5** (CEFR level)"
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "ce757daa",
+   "id": "e0b124d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,8 +919,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "2f30cb8e",
+   "execution_count": 198,
+   "id": "04e99268",
    "metadata": {},
    "outputs": [
     {
@@ -928,10 +928,19 @@
      "output_type": "stream",
      "text": [
       "Participants Info: \n",
-      " A1 0: A1 Male:0 & A1 Female:0 \n",
-      " A2 0: A1 Male:0 & A1 Female:0 \n",
-      " B1 6837: A1 Male:4820 & A1 Female:2017 \n",
-      " B2 55420: A1 Male:16188 & A1 Female:39232 \n",
+      " \n",
+      " A1 0 : Male:0 &  Female:0 \n",
+      " \n",
+      " A2 0 : Male:0 &  Female:0 \n",
+      " \n",
+      " B1 3 : Male:2 &  Female:1 \n",
+      " \n",
+      " B2 23: Male:7 &  Female:16 \n",
+      " \n",
+      " C1 59: Male:13 &  Female:46 \n",
+      " \n",
+      " C2 2: Male:0 &  Female:2 \n",
+      " \n",
       "\n"
      ]
     }
@@ -940,23 +949,47 @@
     "\n",
     "\n",
     "\n",
-    "print(\"Participants Info: \\n\"\n",
-    "      f\" A1 {a1.shape[0]}: A1 Male:{a1_male.shape[0]} & A1 Female:{a1_female.shape[0]} \\n\"    \n",
-    "      f\" A2 {a2.shape[0]}: A1 Male:{a2_male.shape[0]} & A1 Female:{a2_female.shape[0]} \\n\"   \n",
+    "print(\"Participants Info: \\n \\n\"\n",
+    "      f\" A1 {a1.SubjectID.unique().shape[0]} :\" \n",
+    "      f\" Male:{a1_male.SubjectID.unique().shape[0]} & \" \n",
+    "      f\" Female:{a1_female.SubjectID.unique().shape[0]} \\n \\n\"    \n",
     "      \n",
-    "      f\" B1 {b1.shape[0]}: A1 Male:{b1_male.shape[0]} & A1 Female:{b1_female.shape[0]} \\n\"    \n",
-    "      f\" B2 {b2.shape[0]}: A1 Male:{b2_male.shape[0]} & A1 Female:{b2_female.shape[0]} \\n\"   \n",
-    "    \n",
-    ")"
+    "      f\" A2 {a2.SubjectID.unique().shape[0]} :\" \n",
+    "      f\" Male:{a2_male.SubjectID.unique().shape[0]} & \" \n",
+    "      f\" Female:{a2_female.SubjectID.unique().shape[0]} \\n \\n\"    \n",
+    "      \n",
+    "      f\" B1 {b1.SubjectID.unique().shape[0]} :\" \n",
+    "      f\" Male:{b1_male.SubjectID.unique().shape[0]} & \" \n",
+    "      f\" Female:{b1_female.SubjectID.unique().shape[0]} \\n \\n\"    \n",
+    "      \n",
+    "      f\" B2 {b2.SubjectID.unique().shape[0]}:\" \n",
+    "      f\" Male:{b2_male.SubjectID.unique().shape[0]} & \" \n",
+    "      f\" Female:{b2_female.SubjectID.unique().shape[0]} \\n \\n\"   \n",
+    "      \n",
+    "      \n",
+    "      f\" C1 {c1.SubjectID.unique().shape[0]}:\" \n",
+    "      f\" Male:{c1_male.SubjectID.unique().shape[0]} & \" \n",
+    "      f\" Female:{c1_female.SubjectID.unique().shape[0]} \\n \\n\"    \n",
+    "      \n",
+    "      \n",
+    "      f\" C2 {c2.SubjectID.unique().shape[0]}:\" \n",
+    "      f\" Male:{c2_male.SubjectID.unique().shape[0]} & \" \n",
+    "      f\" Female:{c2_female.SubjectID.unique().shape[0]} \\n \\n\"    \n",
+    "     )\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e17df428",
+   "id": "38e6c989",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
